--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700;800&display=swap" rel="stylesheet">
     <title>my second repo</title>
 </head>
 <body>
-    Programming Hero
+    <header class="banner">
+        <h1 class="banner-title">Let,s Help Those Who Are More In Need</h1>
+        <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nam alias voluptas, nisi neque iste?</p>
+        <button class="btn-primary">Donate Now</button>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
