added donate today

--- a/index.html
+++ b/index.html
@@ -9,12 +9,29 @@
     <title>my second repo</title>
 </head>
 <body>
+    <!-- Header -->
     <header class="banner">
         <h1 class="banner-title">Let,s Help Those Who Are More In Need</h1>
         <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nam alias voluptas, nisi neque iste?</p>
         <button class="btn-primary">Donate Now</button>
     </header>
-    <main></main>
+    <main>
+        <!-- Section for Donate today -->
+        <section class="donate-today">
+            <h2>Donate today</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae tenetur delectus tempore minima sint, ad perferendis. Vitae provident nulla fugiat.</p>
+            <div class="donate-amount">
+                <div class="amount" >100tk</div>
+                <div class="amount" id="tk">200tk</div>
+                <div class="amount">500tk</div>
+                <div class="amount" >1000tk</div>
+                <div class="amount">5000tk</div>
+            </div>
+             <p>Other Amount(Taka)</p>
+             <hr>
+             <button class="btn-primary">Donate Now</button>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
