added donate plan

--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
              <hr>
              <button class="btn-primary">Donate Now</button>
         </section>
+        <!-- Donate Plan -->
+        <section class="donate-plan">
+            <h3 class="plan-title">Our Donate Plan</h3>
+            <p class="plan-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente id fuga, officiis iusto eius saepe voluptates praesentium. Voluptatem dicta totam modi aut voluptates laudantium ea laborum iusto, voluptate voluptatum aperiam!</p>
+            <div class="plan-container">
+                <div class="plan-style-one">
+                    <img src="icons/food.png" alt="Food">
+                    <h4 class="plan-style-title">Food for a family</h4>
+                    <p class="plan-style-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima unde dolorum tempora ab voluptatibus, cumque pariatur est! Exercitationem, aliquid expedita.</p>
+                </div>
+                <div class="plan-style-two">
+                    <img src="icons/shelter.png" alt="shelter">
+                    <h4 class="plan-style-title">Shelter for a family</h4>
+                    <p class="plan-style-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci maxime veritatis debitis nisi enim similique.
+                    </p>
+                </div>
+                <div class="plan-style-three">
+                    <img src="icons/Frame-1.png" alt="fram">
+                    <h4 class="plan-style-title">Education for a child</h4>
+                    <p class="plan-style-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, voluptate culpa? Illum eius ab voluptates?</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
