--- a/index.html
+++ b/index.html
@@ -61,15 +61,22 @@
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quaerat dolorum fugiat repellendus aperiam suscipit consectetur quis sit labore quisquam similique nam repudiandae dicta deserunt voluptate, laudantium voluptatibus iusto tempora. Aliquam et dicta, ipsa necessitatibus deserunt maiores voluptatum consequatur magnam natus vero minima sed numquam corporis. Rem asperiores tempore vel?</p>
                     <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, ipsa nihil sunt, vitae quidem expedita architecto commodi sapiente, ipsam sint quisquam eaque consequuntur non eum nostrum doloremque. Autem nesciunt impedit, ab doloremque nulla totam animi quas at corrupti libero ipsum?</p>
                     <button class="btn-primary">How to contribute?</button></div>
-                <img src="images/donation0.jpg" width="1556px" height="577px" alt="">
+                <img src="images/donation0.jpg" width="1556px" height="577px" class="donation" alt="">
             </div>
             <div class="donation-container">
-                <img src="images/donation3.jpg" width="1556px" height="577px" alt="">
+                <img src="images/donation3.jpg" width="1556px" height="577px" class="donation" alt="">
                 <div class="one"><h3 class="title-donate">They need us to survive</h3>
                     <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum iusto fuga reprehenderit ex vel aliquam iste nostrum quas pariatur soluta totam, voluptatum earum ipsa, cumque autem quis ipsum laborum asperiores quidem, qui numquam! Pariatur cumque dolore possimus, eveniet error, architecto perferendis dolorum impedit soluta sapiente eius minima illum labore suscipit.</p>
                     <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui incidunt eos officia perspiciatis ea minus harum natus reprehenderit quibusdam sint. Iure corrupti necessitatibus illum! Ipsa saepe perferendis magni quasi repellendus, alias aperiam fuga exercitationem tempore nihil odit, quia, est nam.</p>
                     <button class="btn-primary">How to contribute?</button></div>
             </div>
+        </section>
+        <!-- section for form -->
+        <section class="my-updates">
+            <h2 class="update-title">Get My Updates</h2>
+            <p class="update-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, autem saepe alias hic officiis odit voluptates sint, praesentium amet eaque sunt reprehenderit suscipit similique id? Cum eligendi sint deserunt maiores, odio, consequuntur atque architecto optio vitae doloribus ipsum, quasi sunt error debitis. Eligendi, ad animi ab deserunt neque unde quis.</p>
+            <div class="update-form"><input type="email" class="email" name="email" id="email" placeholder="Email">
+            <input type="submit" value="sabmit" class="submit"></div>
         </section>
     </main>
     <footer></footer>
