--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             <input type="submit" value="sabmit" class="submit"></div>
         </section>
     </main>
-    <footer></footer>
+    <!-- footer -->
+    <footer>
+        <div class="footer">
+            <h4 class="footer-title">BE Hamble</h4>
+            <p class="footer-description">I'm gonna do it.</p>
+        </div>
+    </footer>
 </body>
 </html>
